[package]
name = "redlike"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
memchr = "2.8.0"
tokio-util = "0.7.18"
serde = {version = "1", features = ["derive"]}
serde_bytes = "0.11"
serde_json = "1"
clap = { version = "4.6.0", features = ["derive", "env"] }


[dev-dependencies]
proptest = "1.0.0"
